specs/fragments/initablefromarrayliteral/array-from-literal-last.test
// Test: array-from-literal-last
function main() returns int
    var arr = [1, 2, 99]
    var val = try arr.last() otherwise 0
    return val
end 'main'
---
ExitCode: 99
---
func.func @main() -> i64 {
  ^entry:
    x86.prologue stack_size=168 saved_gprs=[RBX,R12,R13]
    x86.lea_rdata rax, @__arr_3C2157BE445152A5
    x86.mov rcx, 3
    x86.lea rdx, qword ptr [rbp-64]
    x86.lea r8, qword ptr [rdx]
    x86.mov qword ptr [r8], rax
    x86.lea r8, qword ptr [rdx+8]
    x86.mov qword ptr [r8], rcx
    x86.lea r8, qword ptr [rdx+16]
    x86.mov qword ptr [r8], rcx
    x86.mov r8, 1
    x86.lea rcx, qword ptr [rdx+24]
    x86.mov dword ptr [rcx], r8
    x86.mov r8, 0
    x86.lea rcx, qword ptr [rdx+28]
    x86.mov dword ptr [rcx], r8
    x86.mov rbx, 0
    x86.lea r8, qword ptr [rbp-104]
    x86.lea rcx, qword ptr [r8]
    x86.mov qword ptr [rcx], rbx
    x86.lea rcx, qword ptr [r8+8]
    x86.mov rax, 32
    x86.push rsi
    x86.push rdi
    x86.mov rdi, rcx
    x86.mov rsi, rdx
    x86.mov rcx, rax
    x86.cld
    x86.rep_movsb
    x86.pop rdi
    x86.pop rsi
    x86.lea r12, qword ptr [rbp-144]
    x86.mov rax, 40
    x86.push rsi
    x86.push rdi
    x86.mov rdi, r12
    x86.mov rsi, r8
    x86.mov rcx, rax
    x86.cld
    x86.rep_movsb
    x86.pop rdi
    x86.pop rsi
    x86.lea r13, qword ptr [rbp-160]
    x86.mov r10, r13
    x86.mov r11, r12
    x86.mov rdx, r11
    x86.mov rcx, r10
    x86.call Array$int.last
    x86.lea rax, qword ptr [r13]
    x86.movzx r8, byte ptr [rax]
    x86.mov rax, r8
    x86.cmp rax, rbx
    x86.setne rax
    x86.movzx rax, rax
    x86.test rax, rax
    x86.jne try.error
    x86.jmp try.success
  ^try.success:
    x86.lea rax, qword ptr [r13+8]
    x86.mov r8, qword ptr [rax]
    x86.mov r13, r8
    x86.jmp try.merge
  ^try.error:
    x86.mov r13, 0
    x86.jmp try.merge
  ^try.merge(%64: i64):
    x86.lea r8, qword ptr [r12+8]
    x86.mov r10, r8
    x86.mov eax, dword ptr [r10+24]
    x86.test eax, 1
    x86.jz free_do_0
    x86.jmp free_done_0
    free_do_0:
    x86.mov rcx, qword ptr [r10]
    x86.call maxon_free
    free_done_0:
    x86.mov rax, r13
    x86.epilogue saved_gprs=[RBX,R12,R13]
    x86.ret
}

func.func @Array$int.last(%__error_union_ret: ptr<!maxon.error_union<i64, ArrayError>>, %self: memref<!maxon.struct<Array$int>>) {
  ^entry(%__error_union_ret: ptr<!maxon.error_union<i64, ArrayError>>, %self: memref<!maxon.struct<Array$int>>):
    x86.prologue stack_size=32
    x86.mov rax, rcx
    x86.mov rcx, rdx
    x86.lea rdx, qword ptr [rcx+8]
    x86.lea r8, qword ptr [rdx+8]
    x86.mov rdx, qword ptr [r8]
    x86.mov r8, 0
    x86.cmp rdx, r8
    x86.sete r8
    x86.movzx r8, r8
    x86.test r8, r8
    x86.jne then
    x86.jmp merge
  ^then:
    x86.mov r8, 0
    x86.mov r9, 1
    x86.mov byte ptr [rax], r9
    x86.mov r9, 8
    x86.lea r10, qword ptr [rax+r9]
    x86.mov byte ptr [r10], r8
    x86.epilogue
    x86.ret
  ^merge:
    x86.mov r10, 0
    x86.mov byte ptr [rax], r10
    x86.lea r10, qword ptr [rcx+8]
    x86.mov rcx, 1
    x86.mov r8, rdx
    x86.sub r8, rcx
    x86.lea rcx, qword ptr [r10]
    x86.mov r10, qword ptr [rcx]
    x86.mov rcx, 3
    x86.mov rdx, r8
    x86.shl rdx, rcx
    x86.lea rcx, qword ptr [r10+rdx]
    x86.mov r10, qword ptr [rcx]
    x86.mov rcx, 8
    x86.lea rdx, qword ptr [rax+rcx]
    x86.mov qword ptr [rdx], r10
    x86.epilogue
    x86.ret
}
---
